tests/baselines/reference/twoAccessorsWithSameName2(strict=true).errors.txt
twoAccessorsWithSameName2.ts(2,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(3,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(7,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(7,16): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
twoAccessorsWithSameName2.ts(7,18): error TS7006: Parameter 'v' implicitly has an 'any' type.
twoAccessorsWithSameName2.ts(8,16): error TS2300: Duplicate identifier 'x'.
twoAccessorsWithSameName2.ts(8,16): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
twoAccessorsWithSameName2.ts(8,18): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== twoAccessorsWithSameName2.ts (8 errors) ====
    class C {
        static get x() { return 1; }
                   ~
!!! error TS2300: Duplicate identifier 'x'.
        static get x() { return 1; } // error
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class D {
        static set x(v) {  }
                   ~
!!! error TS2300: Duplicate identifier 'x'.
                   ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                     ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        static set x(v) {  } // error
                   ~
!!! error TS2300: Duplicate identifier 'x'.
                   ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                     ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }
    
    class E {
        static get x() {
            return 1;
        }
        static set x(v) { }
    }